# RmAlign

./: .gitignore  README.md  RepeatMasker  TODO  adjudicate_task.py  align_convert.py  align_task.py  generate_adjudication_tasks.py  generate_align_tasks.py  main.nf  nextflow.config  postprocess_task.py  pyproject.toml  rmlog.py  trmblast.py
conf/: base.config  profiles.config
data/: example-1mb.fa  example-25kb.fa  example.fa  lib.fa
telib/: __init__.py
telib/formats/: bpaf.bak.1  bpaf.py  caf.py  caf.py.2  crossmatch.py  crossmatch.py.save  crossmatch.py.save.2  crossmatch.py.save.3  dfam_tsv.py  rmblast.py
telib/metrics/: kimura.py  nishimaki.py  pairwisealn.py
telib/models/: pairwise_align_collection.py  pairwise_alignment.py
telib/runners/: rmblast.py
telib/scoring/: evalue.py  gumbel_params.py  pairwise_alignment_score.py  substitution_matrix.py
telib/sequences/: base.py  fasta.py  twobit.py  twobit.py.old
telib/tests/: conftest.py
telib/tests/data/: ex1.2bit  ex1.fa
telib/tests/formats/: test_bpaf.py  test_caf.py  test_crossmatch.py  test_dfam_tsv.py  test_rmblast.py
telib/tests/models/: test_pairwise_alignment.py
telib/tests/scoring/: conftest.py  test_pairwise_alignment_score.py  test_substitution_matrix.py
telib/tests/sequences/: test_sources.py
telib/utils/: rle.py
utils/: align_convert.py  bpaf_converter.py  caf_extract_div.py  threshold_filter.py
